infer/tests/codetoanalyze/objc/errors/frontend/struct_initlistexpr.c
../../../c/frontend/initialization/struct_initlistexpr.c